# ssmpc

./: Cargo.toml  README.md  index.html  install.sh
src/: auth.rs  conf.rs  control_panel.rs  lister.rs  main.rs  networking.rs  player_state.rs  search_bar.rs  song.rs  statusbar.rs  youtube_results.rs
src/controls/: messages.rs  mod.rs
src/pages/: index.html
src/youtube/: mod.rs  results.rs  video.rs
