[package]
name = "ssmpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.2.3"
gloo-net = "0.2.6"
percent-encoding = "2.2.0"
regex = "1.7.3"
reqwest = "0.11.16"
serde = "1.0.159"
serde_json = "1.0.95"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = "0.3.61"
yew = { version = "0.20.0", features = ["csr"] }

[dev-dependencies]
tokio = { version = "1.27.0", features = ["macros"] }
